--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^4.34.12",
     "antd": "4.24.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-helmet-async": "^1.3.0",
-    "@tanstack/react-query": "^4.34.12",
     "react-router-dom": "^6.14.2",
+    "styled-components": "^6.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
