--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@tanstack/react-query": "^4.34.12",
     "@ant-design/compatible": "^1.1.2",
     "@ant-design/icons": "^5.0.1",
     "@apollo/client": "^3.7.1",
     "@babel/eslint-parser": "^7.27.1",
     "@babel/polyfill": "^7.7.0",
     "@emotion/core": "^10.0.22",
+    "@hookform/resolvers": "^3.9.0",
     "@mergeapi/react-merge-link": "^2.1.1",
     "@react-google-maps/api": "^2.12.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@stripe/react-stripe-js": "^1.0.0",
     "@stripe/stripe-js": "^1.0.0",
+    "@tanstack/react-query": "^4.34.12",
+    "@types/react-router-dom": "^5.3.3",
     "@uiw/react-color-chrome": "^2.3.2",
     "actioncable": "^5.2.4-2",
     "aes256": "^1.1.0",
@@ -53,16 +54,16 @@
     "lodash": "^4.17.21",
     "memoize-one": "^6.0.0",
     "odometer": "^0.4.8",
-    "plyr-react": "^5.3.0",
     "plyr": "3.8.2",
+    "plyr-react": "^5.3.0",
     "postcode-validator": "^3.9.2",
     "prop-types": "^15.7.2",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dnd": "^15.0.1",
     "react-dnd-html5-backend": "^15.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-dom-confetti": "^0.2.0",
     "react-error-boundary": "^4.0.11",
     "react-feather": "^2.0.10",
@@ -81,7 +82,7 @@
     "react-rating": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^6.26.2",
     "react-spring": "^9.7.4",
     "react-to-print": "^3.0.2",
     "react-turnstile": "^1.1.4",
@@ -100,19 +101,14 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.20",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "lovable-tagger": "^1.1.7",
-    "vite": "^5.4.1",
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
     "@cypress/code-coverage": "^3.9.12",
+    "@eslint/js": "^9.9.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.2",
@@ -121,18 +117,23 @@
     "eslint": "^9.27.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-sonarjs": "^3.0.2",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "globals": "^15.9.0",
     "html-webpack-plugin": "^5.5.1",
     "husky": "^3.1.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "istanbul-lib-coverage": "^3.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.3",
+    "lovable-tagger": "^1.1.7",
     "nyc": "^15.0.1",
     "prettier": "^1.19.1",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^5.3.9",
+    "vite": "^5.4.1",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
