--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "vite_react_shadcn_js",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,14 +20,10 @@
     "react-feather": "^2.0.10",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.14.2",
-    "styled-components": "^6.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "styled-components": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/node": "^22.5.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
@@ -35,8 +31,6 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
 }
